tests/NormalTests/paczka2/big_fuzzy/60674886.err
Error in line 1: QHRLZx S545 88,0
Error in line 6: Z5GZUf S545 17,9
Error in line 10: uPX3mYgG A283 66,2
Error in line 29: Z5GZUf S376 9,5
Error in line 37: uPX3mYgG S604 87,8
Error in line 55: QHRLZx S545 0,6
Error in line 58: uPX3mYgG S545 208,1
Error in line 57: QHRLZx A283 57,5
Error in line 76: FqogQrN9QE A283 71,2
Error in line 79: FqogQrN9QE S545 41,71
Error in line 77: FqogQrN9QE S545 58,7
Error in line 92: Z5GZUf S604 30,2
Error in line 97: uPX3mYgG S604 69,6
Error in line 102: S604 S604 3,2
Error in line 100: FqogQrN9QE S545 2,4
Error in line 108: S604 S545 48,7
Error in line 114: Z5GZUf S604 46,4
Error in line 120: QHRLZx A283 78,1
Error in line 130: Gtx45HAGq S376 45,6
Error in line 129: QHRLZx S376 79,9
Error in line 136: S604 S376 -2,8
Error in line 132: S604 S376 58,6
Error in line 134: QHRLZx S604 36,6
Error in line 142: Gtx45HAGq S545 81,7
Error in line 139: Z5GZUf S376 21,1
Error in line 165: S604 A28w 87,2
Error in line 168: fAen5 S545 46,p
Error in line 161: Z5GZUf S545 75,8
Error in line 179: Gtx45HAGq A283 67,2
Error in line 171: fAen5 S545 55,8
Error in line 169: Z5GZUf S376 7,8
Error in line 187: FqogQrN9QE A283 56,7
Error in line 186: S604 S604 104,8
Error in line 189: S604 S545 43,1
Error in line 199: Z5GZUf S604 26,4
Error in line 174: uPX3mYgG S376 29,4
Error in line 183: Gtx45HAGq S604 79,4
Error in line 209: fAen5 S545 12,9
Error in line 213: QHRLZx S604 74,7
Error in line 218: S604 A283 36,3
Error in line 224: uPX3mYgG S376 96,9
Error in line 230: uPX3mYgG A283 49,2
Error in line 237: uPX3mYgG S604 83,2
Error in line 240: QHRLZx S376 99,2
Error in line 241: uPX3mYgG A283 61,5
Error in line 249: fAen5 Sd76 d2,5
